Simplify drawable management in Zone
Rather than maintain separate fields for each layer, the fields `drawables`, `gmDrawables`, `objectDrawables`, and
`backgroundDrawables` now packaged into a single map so that the required list can be looked up according to
layer. Serialization backwards compatibility requires the original fields to still be maintained, but at runtime only
the new `drawablesByLayer` is relied on, even for DTO conversions. Some other simplifications were done in this area,
such as:
- The fields can be `@NonNull` by ensuring the initializer and `readResolve()` set them.
- The copying of the lists in the copy constructor can use the `LinkedList` constructor rather than
  `Collections.copy()` (`Collections.copy()` does not copy the elements themselves despite what the comments seemed to
  suggest).

A bug fix was applied where zone IDs were only being consistently set for token-layer templates, and not for the
others.

We also now have `Zone.getDrawnElements(Zone.Layer)` that provides external access to the drawing by layer, rather than
keeping four separate methods that require  hardcoded layer names due to the method naming. This increased flexibility
enabled a similar refactoring in `ZoneRenderer` so that the serparate drawable renderer fields could be handled
uniformly in a single map as well.